native_math/frb_generated.h

typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_cst_list_prim_f_64_strict {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_strict;
typedef struct wire_cst_list_list_prim_f_64_strict {
  struct wire_cst_list_prim_f_64_strict **ptr;
  int32_t len;
} wire_cst_list_list_prim_f_64_strict;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_record_string_f_64 {
  struct wire_cst_list_prim_u_8_strict *field0;
  double field1;
} wire_cst_record_string_f_64;
typedef struct wire_cst_list_record_string_f_64 {
  struct wire_cst_record_string_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_string_f_64;
typedef struct wire_cst_graph_point {
  double x;
  double y;
  bool valid;
} wire_cst_graph_point;
typedef struct wire_cst_list_graph_point {
  struct wire_cst_graph_point *ptr;
  int32_t len;
} wire_cst_list_graph_point;
typedef struct wire_cst_matrix_result {
  bool success;
  struct wire_cst_list_prim_f_64_strict *data;
  uintptr_t rows;
  uintptr_t cols;
  double *scalar;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_matrix_result;
typedef struct wire_cst_list_matrix_result {
  struct wire_cst_matrix_result *ptr;
  int32_t len;
} wire_cst_list_matrix_result;
typedef struct wire_cst_list_prim_u_64_strict {
  uint64_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_64_strict;
typedef struct wire_cst_record_f_64_f_64 {
  double field0;
  double field1;
} wire_cst_record_f_64_f_64;
typedef struct wire_cst_list_record_f_64_f_64 {
  struct wire_cst_record_f_64_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_f_64_f_64;
typedef struct wire_cst_unit_result {
  bool success;
  double value;
  struct wire_cst_list_prim_u_8_strict *from_unit;
  struct wire_cst_list_prim_u_8_strict *to_unit;
  struct wire_cst_list_prim_u_8_strict *formula;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_unit_result;
typedef struct wire_cst_list_unit_result {
  struct wire_cst_unit_result *ptr;
  int32_t len;
} wire_cst_list_unit_result;
typedef struct wire_cst_calculus_result {
  bool success;
  double value;
  struct wire_cst_list_prim_u_8_strict *symbolic;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_calculus_result;
typedef struct wire_cst_complex_result {
  bool success;
  double real;
  double imag;
  double magnitude;
  double angle_rad;
  double angle_deg;
  struct wire_cst_list_prim_u_8_strict *formatted_rect;
  struct wire_cst_list_prim_u_8_strict *formatted_polar;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_complex_result;
typedef struct wire_cst_confidence_interval_result {
  bool success;
  double lower;
  double upper;
  double center;
  double margin_of_error;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_confidence_interval_result;
typedef struct wire_cst_correlation_result {
  bool success;
  double correlation;
  double covariance;
  double p_value;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_correlation_result;
typedef struct wire_cst_discrete_result {
  bool success;
  uint64_t value;
  struct wire_cst_list_prim_u_8_strict *big_value;
  struct wire_cst_list_prim_u_64_strict *values;
  bool *bool_result;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_discrete_result;
typedef struct wire_cst_distribution_result {
  bool success;
  double pdf;
  double cdf;
  double mean;
  double variance;
  double std_dev;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_distribution_result;
typedef struct wire_cst_expression_result {
  bool success;
  double value;
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *formatted;
} wire_cst_expression_result;
typedef struct wire_cst_graph_result {
  bool success;
  struct wire_cst_list_graph_point *points;
  double x_min;
  double x_max;
  double y_min;
  double y_max;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_graph_result;
typedef struct wire_cst_hypothesis_test_result {
  bool success;
  double test_statistic;
  double p_value;
  double critical_value;
  bool reject_null;
  struct wire_cst_record_f_64_f_64 confidence_interval;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_hypothesis_test_result;
typedef struct wire_cst_matrix_decomposition {
  bool success;
  struct wire_cst_list_prim_u_8_strict *decomposition_type;
  struct wire_cst_list_matrix_result *matrices;
  struct wire_cst_list_String *labels;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_matrix_decomposition;
typedef struct wire_cst_record_list_record_f_64_f_64_list_record_f_64_f_64 {
  struct wire_cst_list_record_f_64_f_64 *field0;
  struct wire_cst_list_record_f_64_f_64 *field1;
} wire_cst_record_list_record_f_64_f_64_list_record_f_64_f_64;
typedef struct wire_cst_regression_result {
  bool success;
  struct wire_cst_list_prim_f_64_strict *coefficients;
  double r_squared;
  struct wire_cst_list_prim_f_64_strict *residuals;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_regression_result;
typedef struct wire_cst_solve_result {
  bool success;
  struct wire_cst_list_prim_f_64_strict *roots;
  uintptr_t iterations;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_solve_result;
typedef struct wire_cst_statistics_result {
  bool success;
  struct wire_cst_list_record_string_f_64 *values;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_statistics_result;