lib/src/rust_math/frb_generated.io.dart


typedef DartPort = ffi.Int64;
typedef DartDartPort = int;
typedef DartPostCObjectFnTypeFunction =
    ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction =
    bool Function(DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPostCObjectFnType =
    ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;

final class wire_cst_list_prim_f_64_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Double> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_list_prim_f_64_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_f_64_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_f_64_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Double> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_record_string_f_64 extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;

  @ffi.Double()
  external double field1;
}

final class wire_cst_list_record_string_f_64 extends ffi.Struct {
  external ffi.Pointer<wire_cst_record_string_f_64> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_graph_point extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  @ffi.Bool()
  external bool valid;
}

final class wire_cst_list_graph_point extends ffi.Struct {
  external ffi.Pointer<wire_cst_graph_point> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_matrix_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_prim_f_64_strict> data;

  @ffi.UintPtr()
  external int rows;

  @ffi.UintPtr()
  external int cols;

  external ffi.Pointer<ffi.Double> scalar;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_list_matrix_result extends ffi.Struct {
  external ffi.Pointer<wire_cst_matrix_result> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_u_64_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint64> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_record_f_64_f_64 extends ffi.Struct {
  @ffi.Double()
  external double field0;

  @ffi.Double()
  external double field1;
}

final class wire_cst_list_record_f_64_f_64 extends ffi.Struct {
  external ffi.Pointer<wire_cst_record_f_64_f_64> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_unit_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double value;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> from_unit;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> to_unit;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> formula;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_list_unit_result extends ffi.Struct {
  external ffi.Pointer<wire_cst_unit_result> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_calculus_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double value;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> symbolic;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_complex_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double real;

  @ffi.Double()
  external double imag;

  @ffi.Double()
  external double magnitude;

  @ffi.Double()
  external double angle_rad;

  @ffi.Double()
  external double angle_deg;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> formatted_rect;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> formatted_polar;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_confidence_interval_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double lower;

  @ffi.Double()
  external double upper;

  @ffi.Double()
  external double center;

  @ffi.Double()
  external double margin_of_error;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_correlation_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double correlation;

  @ffi.Double()
  external double covariance;

  @ffi.Double()
  external double p_value;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_discrete_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Uint64()
  external int value;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> big_value;

  external ffi.Pointer<wire_cst_list_prim_u_64_strict> values;

  external ffi.Pointer<ffi.Bool> bool_result;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_distribution_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double pdf;

  @ffi.Double()
  external double cdf;

  @ffi.Double()
  external double mean;

  @ffi.Double()
  external double variance;

  @ffi.Double()
  external double std_dev;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_expression_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double value;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> formatted;
}

final class wire_cst_graph_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_graph_point> points;

  @ffi.Double()
  external double x_min;

  @ffi.Double()
  external double x_max;

  @ffi.Double()
  external double y_min;

  @ffi.Double()
  external double y_max;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_hypothesis_test_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Double()
  external double test_statistic;

  @ffi.Double()
  external double p_value;

  @ffi.Double()
  external double critical_value;

  @ffi.Bool()
  external bool reject_null;

  external wire_cst_record_f_64_f_64 confidence_interval;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_matrix_decomposition extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> decomposition_type;

  external ffi.Pointer<wire_cst_list_matrix_result> matrices;

  external ffi.Pointer<wire_cst_list_String> labels;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_record_list_record_f_64_f_64_list_record_f_64_f_64
    extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_record_f_64_f_64> field0;

  external ffi.Pointer<wire_cst_list_record_f_64_f_64> field1;
}

final class wire_cst_regression_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_prim_f_64_strict> coefficients;

  @ffi.Double()
  external double r_squared;

  external ffi.Pointer<wire_cst_list_prim_f_64_strict> residuals;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_solve_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_prim_f_64_strict> roots;

  @ffi.UintPtr()
  external int iterations;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_statistics_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_record_string_f_64> values;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}
